In the Icy North

--- a/localisation/english/PB_Finland_l_english.yml
+++ b/localisation/english/PB_Finland_l_english.yml
@@ -13,12 +13,49 @@
   ##########################
 
   ##########################
+  # Decisions
+
+   FFI_winter_war_category:0 "The Winter War"
+   FFI_winter_war_category_desc:0 "\n\n\n\n\n\nThe War we wage in the icy north is our last chance of survival for our people. We will not submit to the Russian babarians like the others.\n\nHowever alone we can not win this war against the might of the Russian army and we constantly search for new sources of support. May they be material or political.\n\nOur forces have to adapt to the fighting on the ground, learn to deal with the supply situation and the terrain and use these factors to our advantage."
+
+   ffi_control_border_tornio:0 "§RThe Border crossing at Tornio can not be lost - Under any circumstance!§!"
+
+   FFI_deal_with_supply_surroundings:0 "Adapting to harsh field conditions"
+
+   FFI_more_swedish_support:0 "Try increasing Swedish Support"
+
+   FFI_help_from_denmaaaa:0 "Petition Danish Help"
+
+   FFI_french_contacts:0 "Contact old French Friends"
+
+
+   FFI_fortify_Tornio:0 "Fortify Tornio"
+   FFI_fortify_Tornio_desc:0 "We can not lose Tornio at any circumstance. We must ensure that the town does not fall into Russian hands by land or if rather unlikely by sea."
+   ffi_control_tornio:0 "Controls Tornio"
+
+
+   FFI_find_support_in_London:0 "Speak in the House of Commons"
+   FFI_find_support_in_London_desc:0 "With tensions rising between the global superpowers of the British Empire and the Russian Empire we migh be able to finally gain support from the strongest nation in the world. Our nations people have never interacted with each other much in history so the struggles of Finland are not well known in Britian. Diplomats in London have been allowed to speak to the House of Commons. The session will also appear in the british telescreening."
+   
+   FFI_find_support_in_Germany:0 "Find Support in Germany"
+   FFI_find_support_in_Germany_desc:0 "After the Eastern Revolutions, the Germans have always been sympathetic to the struggles of the nationalities suffering under Russia. While Frankfurt is trying to maintain good relations with Russia, maybe our voice will be heard there. Even if we only gain small amounts of support it is worth it."
+
+   FFI_montly_Swedish_Support:0 "Monthly Swedish Support"
+   FFI_montly_Swedish_Support_desc:0 "Every month deliveries of dearly needed swedish goods and weapons cross the border. Weapons made by Swedish gun manufacturers on contract, rations donated by the Swedish people or sometimes even bigger presents are our lifeline to continue this war."
+
+  
+  ##########################
+
+  ##########################
   # MINISTERS
   ##########################
 
 
   ##########################
   # IDEAS
+
+  PB_FFI_army_terrain_1:0 "Being one with Finland"
+
   ##########################
 
 
