--- a/localisation/english/PB_Finland_l_english.yml
+++ b/localisation/english/PB_Finland_l_english.yml
@@ -27,7 +27,7 @@
    FFI_help_from_denmaaaa:0 "Petition Danish Help"
 
    FFI_french_contacts:0 "Contact old French Friends"
-
+   FFI_french_contacts_desc:0 "While our cooperation with the French has come to a halt due to their changing geopolitical situation, we still have many old personal contacts within the French army. This rebellion would have never happened without the French laying the groundwork during the Great War by training the Chasseur units. Maybe some old friends might spare some guns to us?"
 
    FFI_fortify_Tornio:0 "Fortify Tornio"
    FFI_fortify_Tornio_desc:0 "We can not lose Tornio at any circumstance. We must ensure that the town does not fall into Russian hands by land or if rather unlikely by sea."
@@ -42,6 +42,10 @@
 
    FFI_montly_Swedish_Support:0 "Monthly Swedish Support"
    FFI_montly_Swedish_Support_desc:0 "Every month deliveries of dearly needed swedish goods and weapons cross the border. Weapons made by Swedish gun manufacturers on contract, rations donated by the Swedish people or sometimes even bigger presents are our lifeline to continue this war."
+
+   FFI_montly_volunteers:0 "Monthly Volunteers and Defectors"
+   FFI_montly_volunteers_desc:0 "One of our greatest issues is the lack of man. Despite how well and determined we fight you rarely win battles outnumbered. Luckily there many soldiers in the conscripted Finnish Russian armies who just wait for the right time to defect or other determined souls making the journey up north to join the cause."
+
 
   
    ##########################
@@ -60,6 +64,19 @@
   ffinland.12.t:0 "No German Aid"
   ffinland.12.d:0 "Germany has decided to send no aid.\n\nThe Germans have made the decision to remain ignorant while thousands suffer under Russian tyranny. The only thing we received from German Government were thoughts and prayers for our justified struggle."
   ffinland.12.a:0 "Cold Bastards"
+
+  ffinland.13.t:0 "The Free Finnish Ask for Support"
+  ffinland.13.d:0 ""
+  ffinland.13.a:0 "We will not ruin our relations with Russia over this"
+  ffinland.13.b:0 "To old times"
+
+  ffinland.14.t:0 "No French Help"
+  ffinland.14.d:0 ""
+  ffinland.14.a:0 "Everyone is welcome"
+
+  ffinland.15.t:0 "French send Help"
+  ffinland.15.d:0 ""
+  ffinland.15.a:0 "Thank you, one last time"
 
   ##########################
 
