finland loc for lofino

--- a/localisation/english/PB_Finland_l_english.yml
+++ b/localisation/english/PB_Finland_l_english.yml
@@ -56,7 +56,6 @@
   ffinland.10.a:0 "We can maybe help them a little"
   ffinland.10.b:0 "Ignore them"
 
-
   ffinland.11.t:0 "German Aid"
   ffinland.11.d:0 "German Aid has arrived in the form of logistical support.\n\nGermany has send large amounts of machinery and engineer equipment to improve our hard logistical situation. While some hoped for more actual military assistance what we received will certainly help getting clothing and warm food to our boys in the trenches."
   ffinland.11.a:0 "Every little bit helps"
@@ -77,6 +76,43 @@
   ffinland.15.t:0 "French send Help"
   ffinland.15.d:0 ""
   ffinland.15.a:0 "Thank you, one last time"
+
+  ffinland.cap.1.t:0 "Liberation of Oulu"
+  ffinland.cap.1.d:0 "After a hard fought battle between us and the Russian forces, we were able to capture the stragecially important harbour city of Oulu. With this victory in our hands we may soon capture the rest of our occupied lands."
+  ffinland.cap.1.a:0 "Finland lays wide open to us."
+
+  ffinland.cap.2.t:0 "Liberation of Vaasa"
+  ffinland.cap.2.d:0 "The population of Vaasa celebrates on the street as our convoys enter the city. We have liberated our Finnish brothers and sisters in Vaasa from the Russian opressors."
+  ffinland.cap.2.a:0 "Our enemies will never recover from this"
+
+  ffinland.cap.3.t:0 "Liberation of Tampere"
+  ffinland.cap.3.d:0 "The terrain caused the fight to be unbearable, morale was lower than ever. But after struggling through the marshes and lakes of the Finnish countryside, we made it too the city, and succsessfully took it."
+  ffinland.cap.3.a:0 "I can see Helsinki from here."
+
+  ffinland.cap.4.t:0 "Liberation of Helsinki"
+  ffinland.cap.4.d:0 "Finally we have reached the southern coast, where our biggest prize yet lays. We had some rough fighting while advancing through the outer districts of the city, until we eventually made it too the city centre where all hell broke lose. We defeated the Russian forces, and their commanders knew this would be the final blow to their campaign."
+  ffinland.cap.4.a:0 "We have finally captured the heart of Finland"
+
+  ffinland.cap.5.t:0 "Liberation of Viipuri"
+  ffinland.cap.5.d:0 "Their supply lines are in chaos as we capture the border city of Viipuri. Railway connections into Russia are quite a ways a way as the starving, demoralised Russians are camping in the darkness ridden forests of Finland. It won't be long now before the pesky collaborators surrender to the true Finnish government."
+  ffinland.cap.5.a:0 "Their retreat shall be into Russia"
+
+  ffinland.cap.6.t:0 "Liberation of Kuopio"
+  ffinland.cap.6.d:0 "The Russian forces in the area don't know what to do as we capture their vital supply hub of middle Finland. The commanders of the Russian forces must be in utter chaos while we march into the halfway point of our liberation campaign."
+  ffinland.cap.6.a:0 "We are halfway there."
+
+  ffinland.cap.7.t:0 "Liberation of Turku"
+  ffinland.cap.7.d:0 "The baltic coast now lays wide open to us as we have captured the port city of Turku. A city that is integral too the success of our campaign and that of the enemy's. Victory is in our grasp."
+  ffinland.cap.7.a:0 "Åland is only small boat ride away."
+
+  ffinland.fig.1.t:0 "Defectors arrive at the front"
+  ffinland.fig.1.d:0 "During many of our fights on the frontlines, where we desperately fight for the survival of our nation, many of the enemy soldiers have surrenderd to us and have decided to join our side and we welcome them with open arms."
+  ffinland.fig.1.a:0 "We need all the men we can gather."
+
+  ffinland.fig.2.t:0 "Enemy weapons cache captured"
+  ffinland.fig.2.d:0 "The Russians are naturally disorganised during battles, and even if we have lost the battle, a lot of battle equipment is left behind for our units to capture. You would think by now the Russians would know they are funding their own invasion."
+  ffinland.fig.2.a:0 "A well needed boost to our campaign."
+
 
   ##########################
 
