Bleeding South Adjustments and such

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -129,6 +129,10 @@ PB_AME_Eyes_in_the_Skies_Decision:0 "Run a North American Spy Patrol"
 PB_AME_Orbit_Wars_Contribution:0 "Share Research with the British"
 PB_AME_Orbit_Wars_Research_Roulette:0 "Conduct Orbital Experiments"
 
+PB_NIC_Re_Occupied_TooltipL:0 "§YNicaragua has been re-invaded and occupied§!"
+
+PB_AME_The_Bleeding_South_flag_TT:0 "§YThe South is gearing up for open rebellion.§!"
+
 ##########################
 # COSMETIC TAG
 ##########################
