Another Prussia push

--- a/localisation/english/PB_bookmarks_l_english.yml
+++ b/localisation/english/PB_bookmarks_l_english.yml
@@ -29,9 +29,11 @@
  SCA_PAX_BRITANNICA_DESC:0 "VERY IMPORTANT: The Second Continental Army isn't playable at game start. To play them do the following, *Complete the United Commonwealth Focus: Escalation Dominance*.\n\nBuilt off the back of retired veterans from the Great War under the leadership of Butler, the SCA is a nation ready to do what is needed to ensure a fair and equal America. Every man and women must ensure the liberation of all American workers. Although our great struggle will test the limits of our dedication towards liberation we must stay strong, for no one can understand the plight of the American people beyond ourselves."
  MEX_PAX_BRITANNICA_DESC:0 "The Empire of Mexico has by the grace of God managed to hold itself together since the days of independence from Spain. Under the Iturbide dynasty Mexico initially found itself as the uncontested power on the American continent, enjoying a large influx of new migrant workers and a booming economy thanks to the discorvery of gold and oil. However, Mexico would soon discovered that its believed hegemony over the Americas was little more than a quickly fading dream. Mexico must now face its demons of the past if she wishes to last in this new and ever changing world."
 
- RUS_PAX_BRITANNICA_DESC:0 "Coming In The Next Update" 
- PRS_PAX_BRITANNICA_DESC:0 "Coming In The Next Update" 
+ #Russia
+ RUS_PAX_BRITANNICA_DESC:0 "Write something here Grestin" 
+ PRS_PAX_BRITANNICA_DESC:0 "The Independent State of Prussia, simply Prussia, has been ruled by the Vaterland Front for the past decade. The ultranationalist regime under Philipp Bouhler has been slowly readying the state for the eventual coming war that will grip not only the soul of Europe, but that of the globe. Whilst the Anglo-German hegemonies might be too blind to see that Europe has boarded a one way trip straight to war Prussia and its peoples' have long awaited for the moment where they could finally prove to the world the true capabilities of Prussia's eternal glory.  " 
  POL_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
+
  JAP_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
  CHI_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
  ROC_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
