Pls fix loc tapir

--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -24,6 +24,8 @@
 
   PB_Soldier_General:0 "A Soldier General - Fights with the troops in the trenches"
 
+  PB_Alcohol_Financial_Failure:0 "An Alcoholic Failure"
+
   mass_charge_theorist:0 "Mass Assault Theorist"
   germ_theorist:0 "Germ Theorist" 
   bio_weapons_research:0 "Bio Weapons Research Speed" 
