references to dietsland removed

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -369,7 +369,7 @@
   French.29.b:0 "Holland is of no concern to us."
   French.29.c:0 "The concert of Europe shall not be interrupted!"
 
-  French.30.t:0 "A Compromise at Dietsland"
+  French.30.t:0 "A Compromise with the Netherlands"
   French.30.d:0 "A team of German diplomats has invited our ambassador to Germany and his team to the recently annexed  city of Liège, where they hope to make a compromise with us and avoid war between our two nations.  Already, the commotion and shouting in the room would seemingly be a bad omen, but not all hope may be lost yet.\n\nOne German diplomat in particular has proposed a rather tantalizing offer.  In exchange for abandoning their claims on the rest of Dietland, France shall be granted the region of Flanders,  completing the annexation of all former Belgian lands into the French nation.  Of course, the Dutch have absolutely no say in the matter, and their diplomats are not present at the conference."
   French.30.a:0 "Acceptable terms."
   French.30.b:0 "We will have all our claims!"
@@ -393,12 +393,12 @@
   French.34.b:0 "Exploit the Crisis, take the entire region!"
 
   French.35.t:0 "France rejects the Compromise"
-  French.35.d:0 "Despite our generous diplomatic overtures to the French, the greedy snakes have rejected our offers completely. Instead of seeing reason, they have insisted on their original demands - full annexation of the Kingdom of Dietsland. Our government is now at a crossroads as to what must be done, with the crisis reaching a fever-pitch. Thare are two options at hand for the Empire, to formalize our support for the Netherlands and join them in their struggle against the French, or to abandon them to their fate at the hands of the venomous French menace. Both options have their supporters, but one thing is evident - the French have no intention of slowing down. The choice has become clear, we must:"
+  French.35.d:0 "Despite our generous diplomatic overtures to the French, the greedy snakes have rejected our offers completely. Instead of seeing reason, they have insisted on their original demands - full annexation of the Republic of the Netherlands. Our government is now at a crossroads as to what must be done, with the crisis reaching a fever-pitch. Thare are two options at hand for the Empire, to formalize our support for the Netherlands and join them in their struggle against the French, or to abandon them to their fate at the hands of the venomous French menace. Both options have their supporters, but one thing is evident - the French have no intention of slowing down. The choice has become clear, we must:"
   French.35.a:0 "Intervene - we must protect our interests in Holland!"
   French.35.b:0 "Let it go - we cannot afford a war right now."
 
   French.36.t:0 "The Annexation of the Netherlands"
-  French.36.d:0 "Great news has arrived in Paris today! The perfidious Germans, slimy as they are, have abandoned the Dutch to their fate, leaving them to face French judgement. Our troops march through the streets of Dietsland, establishing order and stability in the newest addition to the French domain. While the international scene weeps and whines at this development, our nation cheers, with yet another injustice being undone - and France being one step closer to redemption. Meanwhile, the SP have drafted their lists, and everyday another house is left dark and empty..."
+  French.36.d:0 "Great news has arrived in Paris today! The perfidious Germans, slimy as they are, have abandoned the Dutch to their fate, leaving them to face French judgement. Our troops march through the streets of the Netherlands, establishing order and stability in the newest addition to the French domain. While the international scene weeps and whines at this development, our nation cheers, with yet another injustice being undone - and France being one step closer to redemption. Meanwhile, the SP have drafted their lists, and everyday another house is left dark and empty..."
   French.36.a:0 "Onwards to Amsterdam!"
 
   French.37.t:0 "France proposes Mutual Defense Pact"
@@ -1446,7 +1446,7 @@
   PB_FRA_Dutch_Crisis_desc:0 "The Dutch have had a long and fruitful friendship with the German Empire, always posing a threat to our nation. We don't know whether they plan on welcoming our regime with open arms or whether they plan on siding with the Germans have they have often done. Better to play it safe and end their presence in Europe to our benefit."
   PB_FRA_Attack_Germany:0 "End the German Hegemony"
   PB_FRA_Attack_Germany_desc:0 "Of all the threats in Europe there are non greater than that of the Germans and British. They have continously hampered our regimes wishes to enter the global stage and we will take this fact no more, France will be a great power, at any and all costs."
-  PB_FRA_integrate_dietsland:0 "Integrate Dietsland"
+  PB_FRA_integrate_dietsland:0 "Integrate the Netherlands"
   PB_FRA_integrate_dietsland_desc:0 "Now that we have finally reached our natural borders to the north, we must work on properly integrating the Dutch into proper Frenchmen in our great state."
   PB_FRA_Pact_of_Thorns:0 "The Pact of Thorns"
   PB_FRA_Pact_of_Thorns_desc:0 "While Russia may be hesitant to join the Pacte Revanchiste we may be able to offer them a diplomatic compromise. Instead of joining the allaince both sides will agree to guarantee one another in the case of armed conflict and will pursue no hostile actions against one another as well. Of course the Russians may change their mind in the future but for now we can rest well knowing we have one less enemy in Europe."
@@ -1975,7 +1975,7 @@
   PB_FRA_HAN_SP:0 "The §YSP§! will be very pleased with this arrangement"
   PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
   PB_FRA_Greater_France_tt:0 "\n§RUnavailable At Current Release:§!\nDepending on your victory circumstances a new focus tree will load"
-  FRA_SP_allemania_grows_through_benelux:0 "Alemannia will grow through Dietsland to connect all SP-governed states"
+  FRA_SP_allemania_grows_through_benelux:0 "Alemannia will grow through the Netherlands to connect all SP-governed states"
   PB_FRA_BRT_SP:0 "Brittany's SP government will become autonomous"
   PB_FRA_BSQ_SP:0 "Basque's SP government will become autonomous"
   PB_FRA_WLA_SP:0 "Wallonia's SP government will become autonomous"
@@ -1987,8 +1987,8 @@
   PB_FRA_create_flemish_legion:0 "Create the Flemish Legion"
   PB_FRA_target_dutch_resistance:0 "Assault the Dutch Resistance in [FROM.GetName]"
   PB_FRA_give_occupiers_collaborators_hardsuits:0 "Provide Hardsuits to the [FROM.GetName] Garrison"
-  PB_FRA_appoint_dietsland_SP_governor:0 "Appoint an SP Governor in Dietsland"
-  PB_FRA_appoint_dietsland_militarist_governor:0 "Appoint a Military Governor in Dietsland"
+  PB_FRA_appoint_dietsland_SP_governor:0 "Appoint an SP Governor in the Netherlands"
+  PB_FRA_appoint_dietsland_militarist_governor:0 "Appoint a Military Governor in the Netherlands"
   PB_FRA_promote_french_culture_in_dietsland:0 "Promote French Culture in the Netherlands"
 
   FRA_not_a_decision:0 "This is §Rnot§! a decision"
