--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -17,6 +17,8 @@
   PB_Der_Berater_5:0 "Der Berater"
   trait_PRS_Junker_Aristocracy:0 "Junker Aristocracy"
   trait_PRS_Junker_Aristocracy_desc:0 "This individual is a member of the Junker aristocracy, they have earned their position in the Prussian military not by hardwork, but by blood."
+  PB_Architect_Of_The_New_Reich:0 "Architect of the New Reich"
+  PB_Resilient_To_The_Cold:0 "Resilient to the Cold"
 
   ##########################
   # TOOLTIPS
@@ -30,6 +32,7 @@
   PB_PRS_Ideology_Above_Identity_tt:0 "The §HBattalion of Free Imperials§! will be raised, comprised of British §gneo-imperialist§! defectors"
   PB_PRS_Strengthen_The_Party_tt:0 "A number of new ministers will be available to recruit:\n\n"
   PB_PRS_Concord_With_Faith_tt:0 "\n§gOur national identity will be§! §HUpgraded!§!\n\n"
+  PRS_spacing:0 " \n"
 
   ##########################
   # MECHANICS
