small wallonia work

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -114,7 +114,7 @@
  VICTORY_POINTS_9909:0 "Nice"
  VICTORY_POINTS_11465:0 "Nantes"
  VICTORY_POINTS_11467:0 "Gliwice"
- VICTORY_POINTS_11483:0 "Lille"
+ VICTORY_POINTS_11483:0 "Rijsel"
  VICTORY_POINTS_11516:0 "Nancy"
  VICTORY_POINTS_11548:0 "Calais"
  VICTORY_POINTS_11563:0 "Rouen"
