More Prussia stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -18,7 +18,14 @@
   trait_PRS_Junker_Aristocracy:0 "Junker Aristocracy"
   trait_PRS_Junker_Aristocracy_desc:0 "This individual is a member of the Junker aristocracy, they have earned their position in the Prussian military not by hardwork, but by blood."
   PB_Architect_Of_The_New_Reich:0 "Architect of the New Reich"
+  PB_Architect_Of_The_New_Reich_2:0 "Architect of the New Reich"
   PB_Resilient_To_The_Cold:0 "Resilient to the Cold"
+
+  ##########################
+  # STATE MODIFIERS
+  ##########################
+
+  PRS_Industrial_Patriotism:0 "Industrial Patriotism"
 
   ##########################
   # TOOLTIPS
