Adjusting AI strategy for the United Commonwealth

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -110,6 +110,7 @@ AME_Empire_Supercomplex_Construction:0 "The Empire Supercomplex Project"
 AME_Freedmen_Agitation:0 "Freedman Agitation"
 AME_Southerner_Agitation:0 "Southern Agitation"
 
+PB_Increase_Stability:0 "Promote National Unity"
 PB_Increase_Warhawk_Power:0 "£UC_SI_Warhawks Increase the power of the Warhawk Lobby"
 PB_Increase_Freedmen_Funding:0 "£UC_SI_Freedmen Increase Funding for Freedmen Provinces"
 PB_Increase_Southern_Funding:0 "£UC_SI_Southerners Increase Funding for Southern Provinces"
