Added Megacorp Bidding Events

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1365,6 +1365,12 @@ Unicom.44.t:0 "The Trial of Carl McPherson"
 Unicom.44.d:0 "The killer would be identified as a Mr. Carl McPherson, a former soldier and a veteran of the Iberian Campaign. His records indicate that he was involved in the Siege of Valladolid, although as expected Majestic Eleven refused to release any records on his involvement in any kind of civilian massacre. In fact, the agency went so far as to claim McPherson was delusional, a fact corroborated by his appearance in court.\n\nMcPherson was functionally catatonic by the time he reached the courtroom, and the trial proceeded relatively uneventfully. Commissioner Ness claimed that McPherson’s appearance and temperament was inconsistent with how he was at the time of his arrest, however the Commonwealth military and MJ11 countered by claiming that McPherson had been rendered an unstable invalid long before entering police custody.\n\nConspiracy theorists have claimed that McPherson was chemically lobotomized while in the custody of MJ11 following his arrest, but the story has largely been downplayed by the media in favor of the circus around McPherson’s expected death sentence.\n\nThe remaining members of McPherson’s unit, including those associated with the victims, have refused to comment on the validity of his claims. Military records indicate no such massacre occurred, however inquests for information that is still classified have been denied."
 Unicom.44.a:0 "The jury votes in favor of the death penalty"
 
+Unicom.45.t:0 "Megacorps Bid for Contracts"
+Unicom.45.d:0 ""
+Unicom.45.a:0 "Ford is the best choice"
+Unicom.45.b:0 "Union Standard is for us"
+Unicom.45.c:0 "The EIEC is a solid option"
+
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
 Unicom_Elections.1.d:0 "Many politicians and citizens believe that Coolidge did not do enough to address the concerns of the veterans and that his lack of action led to the violent removal of the veterans from their encampment in Philadelphia. by the military. Some have even called for his resignation over the matter.\n\nCoolidge has defended his actions, stating that he had to uphold the law and maintain order in the city. However, the controversy surrounding his response to the crisis has only grown, and many are calling for further investigation and accountability. The Bonus Army Crisis remains a stain on the Coolidge administration, and protests and unrest continue even after the end of the general crisis itself."
 Unicom_Elections.1.a:0 "We prevented a revolution and THIS is the thanks we get?"
