Southern Rebellion adjustments

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -312,6 +312,7 @@ PB_AME_Continental_Superiority:0 "Continental Superiority"
 PB_AME_Ford_Production_Quotas_idea:0 "Increased Production Quotas"
 PB_AME_Union_Strikes_idea:0 "Union Strikes"
 AME_Megacorp_Manuevers:0 "Megacorp Manuevers"
+PB_Reintegrate_South:0 "Reintegrate the South"
 
 AME_Suppressed_Agitation:0 "Agitation Suppressed"
 AME_Suppressed_Unions:0 "Union Agitation Suppressed"
