buncha a loc fixes
who keeps making all these mistakes

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -49,7 +49,7 @@
   PBNews.12.a:0 "Interesting times we live in."
 
   PBNews.13.t:0 "TROOPS DEPLOYED IN LONDON"
-  PBNews.13.d:0 "For the first time in living memory, British troops march through the streets of London. In the dead of the night, a clique of British officers, spurred on by the economic crisis and parliamentary gridlock, rose up and seized the apparatus of state.\n\nIt soon became apparent that the coup had been, if not orchestrated, than at least supported by current King-Emperor Edward. As the new regime consolidates power, elements of the former Parliament have vowed to resist the new regime with all available methods."
+  PBNews.13.d:0 "For the first time in living memory, British troops march through the streets of London. In the dead of the night, a clique of British officers, spurred on by the economic crisis and parliamentary gridlock, rose up and seized the apparatus of state.\n\nIt soon became apparent that the coup had been, if not orchestrated, than at least supported by current Queen-Empress Victoria. As the new regime consolidates power, elements of the former Parliament have vowed to resist the new regime with all available methods."
   PBNews.13.a:0 "Democracy dies to thunderous applause"
 
   PBNews.14.t:0 "FRENCH REPUBLIC FALLS"
@@ -529,7 +529,7 @@
   PBNews.135.a:0 "Freedom and Revolution"
 
   PBNews.136.t:0 "RIOTS ACROSS AMERICA"
-  PBNews.136.d:0 "The continued abandoment of Great War veterans from previous and current administrations has left as sour taste in the American public's mouths. Ultimately culminating into violent riots across major American cities such as New York and Chicago, street shootouts between local authorities and Butlerite militias is an often occurrence and many are begging for the situation to reach a peaceful resolve. Some have even called the situation an all-out civil war. London hasn't made a public announcement on the manner but rumours have stated that westminster is less than pleased. "
+  PBNews.136.d:0 "The continued abandnoment of Great War veterans from previous and current administrations has left as sour taste in the American public's mouths. Ultimately culminating into violent riots across major American cities such as New York and Chicago, street shootouts between local authorities and Butlerite militias is an often occurrence and many are begging for the situation to reach a peaceful resolve. Some have even called the situation an all-out civil war. London hasn't made a public announcement on the manner but rumours have stated that westminster is less than pleased. "
   PBNews.136.a:0 "America divided"
 
   PBNews.137.t:0 "RUSSIANS LAND IN JAPAN"
