--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -2045,7 +2045,7 @@ jc_AME_party_revolutionary_long:0 "Provisional Congress of the Revolutionary Ame
 ##########################
 
 PB_AME_Bonus_Brigade_Crisis:0 "Bonus Brigade Crisis"
-PB_AME_Bonus_Brigade_Crisis_desc:0 "\n\n\n\n\n\nOver 2 million men unemployed with mouths to feed, what is one to do? The previous administration under Arthur Meighen thought ingnoring the issue wholesale would be a good idea, oh what fools they were. The Coolidge ministry now has the ardious task of responding to disgruntled Great War veterans who have had enough of the states complete financial abandonment. Unless some major steps are taken to support these desperate men we may face our worst disaster yet since the American Revolution, and the clock has already begun ticking."
+PB_AME_Bonus_Brigade_Crisis_desc:0 "\n\n\n\n\n\nOver 2 million men unemployed with mouths to feed, what is one to do? The previous administration under Arthur Meighen thought ignoring the issue wholesale would be a good idea, oh what fools they were. The Coolidge ministry now has the audious task of responding to disgruntled Great War veterans who have had enough of the states complete financial abandonment. Unless some major steps are taken to support these desperate men we may face our worst disaster yet since the American Revolution, and the clock has already begun ticking."
 
 PB_UC_Bonus_Brigade_Crisis_Active:0 "The Bonus Brigade Crisis is Active"
 
