more core and loc changes

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1051,30 +1051,31 @@
  HYD_cn_ADJ:0 "Deccan"
  HYD_an_ADJ:0 "Deccan"
 
- AWD_ni:0 "Hindustan"
- AWD_ni_DEF:0 "The Kingdom of Hindustan"
- AWD_ds:0 "Hindustan"
- AWD_ds_DEF:0 "The Kingdom of Hindustan"
- AWD_rc:0 "Hindustan"
- AWD_rc_DEF:0 "The Kingdom of Hindustan"
- AWD_an:0 "Hindustan "
- AWD_an_DEF:0 "The Kingdom of Hindustan"
- AWD_cn:0 "Hindustan"
- AWD_cn_DEF:0 "The Kingdom of Hindustan"
- AWD_lb:0 "Hindustan"
- AWD_lb_DEF:0 "The Kingdom of Hindustan"
- AWD_ss:0 "Hindustan"
- AWD_ss_DEF:0 "The Kingdom of Hindustan"
- AWD_jc:0 "Hindustan"
- AWD_jc_DEF:0 "The Kingdom of Hindustan"
- AWD_ni_ADJ:0 "Hindu"
- AWD_rc_ADJ:0 "Hindu"
- AWD_lb_ADJ:0 "Hindu"
- AWD_ss_ADJ:0 "Hindu"
- AWD_jc_ADJ:0 "Hindu"
- AWD_ds_ADJ:0 "Hindu"
- AWD_cn_ADJ:0 "Hindu"
- AWD_an_ADJ:0 "Hindu"
+#Formerly Hindustan
+ AWD_ni:0 "Republic of South India"
+ AWD_ni_DEF:0 "Republic of South India"
+ AWD_ds:0 "Republic of South India"
+ AWD_ds_DEF:0 "Republic of South India"
+ AWD_rc:0 "Republic of South India"
+ AWD_rc_DEF:0 "Republic of South India"
+ AWD_an:0 "Republic of South India"
+ AWD_an_DEF:0 "Republic of South India"
+ AWD_cn:0 "Republic of South India"
+ AWD_cn_DEF:0 "Republic of South India"
+ AWD_lb:0 "Republic of South India"
+ AWD_lb_DEF:0 "Republic of South India"
+ AWD_ss:0 "Republic of South India"
+ AWD_ss_DEF:0 "Republic of South India"
+ AWD_jc:0 "Republic of South India"
+ AWD_jc_DEF:0 "Republic of South India"
+ AWD_ni_ADJ:0 "South-Indian"
+ AWD_rc_ADJ:0 "South-Indian"
+ AWD_lb_ADJ:0 "South-Indian"
+ AWD_ss_ADJ:0 "South-Indian"
+ AWD_jc_ADJ:0 "South-Indian"
+ AWD_ds_ADJ:0 "South-Indian"
+ AWD_cn_ADJ:0 "South-Indian"
+ AWD_an_ADJ:0 "South-Indian"
 
  ORI_ni:0 "Orissa"
  ORI_ni_DEF:0 "The State of Orissa"
@@ -7243,22 +7244,22 @@ SAN_an_ADJ:0 "Indian"
  TRY_cn_ADJ:0 "Transylvanian"
  TRY_an_ADJ:0 "Transylvanian"
 
- BNA_ni:0 "Banat"
- BNA_ni_DEF:0 "The State of Banat"
- BNA_ds:0 "Banat"
- BNA_ds_DEF:0 "The State of Banat"
- BNA_rc:0 "Banat"
- BNA_rc_DEF:0 "The State of Banat"
- BNA_an:0 "Banat"
- BNA_an_DEF:0 "The State of Banat"
- BNA_cn:0 "Banat"
- BNA_cn_DEF:0 "The State of Banat"
- BNA_lb:0 "Banat"
- BNA_lb_DEF:0 "The State of Banat"
- BNA_ss:0 "Banat"
- BNA_ss_DEF:0 "The State of Banat"
- BNA_jc:0 "Banat"
- BNA_jc_DEF:0 "The State of Banat"
+ BNA_ni:0 "Republic of Banat"
+ BNA_ni_DEF:0 "Republic of Banat"
+ BNA_ds:0 "Republic of Banat"
+ BNA_ds_DEF:0 "Republic of Banat"
+ BNA_rc:0 "Republic of Banat"
+ BNA_rc_DEF:0 "Republic of Banat"
+ BNA_an:0 "Republic of Banat"
+ BNA_an_DEF:0 "Republic of Banat"
+ BNA_cn:0 "Republic of Banat"
+ BNA_cn_DEF:0 "Republic of Banat"
+ BNA_lb:0 "Republic of Banat"
+ BNA_lb_DEF:0 "Republic of Banat"
+ BNA_ss:0 "Republic of Banat"
+ BNA_ss_DEF:0 "Republic of Banat"
+ BNA_jc:0 "Republic of Banat"
+ BNA_jc_DEF:0 "Republic of Banat"
  BNA_ni_ADJ:0 "Banatian"
  BNA_rc_ADJ:0 "Banatian"
  BNA_lb_ADJ:0 "Banatian"
@@ -8969,6 +8970,10 @@ SAN_an_ADJ:0 "Indian"
  SCL_ds_ADJ:0 "South-Italian"
  SCL_cn_ADJ:0 "South-Italian"
  SCL_an_ADJ:0 "South-Italian"
+
+ CYR:0 "Cyprus"
+ CYR_DEF:0 "the Kingdom of Cyprus"
+ CYR_ADJ:0 "Cypriot"
 
 ###################################
 # TEMPLATE
