--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -781,7 +781,7 @@
  STATE_780:0 "Miskito Coast"
  STATE_781:0 "Niamey"
  STATE_782:0 "Taoudenni"
- STATE_783:0 "Sidi Ifni"
+ STATE_783:0 "Walvis Bay"
  STATE_784:1 "Wilno"
  STATE_785:0 "Picardy"
  STATE_786:0 "Oualata"
