SCA mexican occupation fix

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1492,7 +1492,7 @@
   SCA39desc:0 "The defeat of Mexico was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Mexico and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA39opta:0 "We own these lands now."
   SCA39optb:0 "Establish a loyal revolutionary regime."
-  SCA39optb:0 "Establish a loyal revolutionary regime and give them Baja California."
+  SCA39optc:0 "Establish a loyal revolutionary regime and give them Baja California."
 
   SCA40title:0 "An Offer From Afar"  ## Doesn't need loc
   SCA40desc:0 "" 
