Small Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -326,6 +326,38 @@
   PB_PRS_Maintain_Racial_Standards_desc:0 ""
   PB_PRS_Reach_Out_To_The_Collaborationists:0 "Reach Out To The Collaborationists"
   PB_PRS_Reach_Out_To_The_Collaborationists_desc:0 ""
+  PB_PRS_Prussia_On_The_World_Stage:0 "Prussia On The World Stage"
+  PB_PRS_Prussia_On_The_World_Stage_desc:0 ""
+  PB_PRS_The_Memel_Convention:0 "The Memel Convention"
+  PB_PRS_The_Memel_Convention_desc:0 ""
+  PB_PRS_Seek_New_Finacial_Partners:0 "Seek New Financial Partners"
+  PB_PRS_Seek_New_Finacial_Partners_desc:0 ""
+  PB_PRS_A_Reich_Of_Our_Own:0 "A Reich Of Our Own"
+  PB_PRS_A_Reich_Of_Our_Own_desc:0 ""
+  PB_PRS_Anti_Jacobin_Crusade:0 "Anti-Jacobin Crusade"
+  PB_PRS_Anti_Jacobin_Crusade_desc:0 ""
+  PB_PRS_Promote_Europeanism:0 "Promote Europeanism"
+  PB_PRS_Promote_Europeanism_desc:0 ""
+  PB_PRS_Demand_Authority_Over_Berlin:0 "Demand Authority Over Berlin"
+  PB_PRS_Demand_Authority_Over_Berlin_desc:0 ""
+  PB_PRS_Our_Greatest_Hour:0 "Our Greatest Hour"
+  PB_PRS_Our_Greatest_Hour_desc:0 ""
+  PB_PRS_The_Reich_In_A_New_Age:0 "The Reich In A New Age"
+  PB_PRS_The_Reich_In_A_New_Age_desc:0 ""
+  PB_PRS_Revitalize_The_Academy:0 "Revitalize The Academy"
+  PB_PRS_Revitalize_The_Academy_desc:0 ""
+  PB_PRS_Europes_Finest_Flyers:0 "Europe's Finest Flyers"
+  PB_PRS_Europes_Finest_Flyers_desc:0 ""
+  PB_PRS_Reinforce_The_Baltic_Fleet:0 "Reinforce The Baltic Fleet"
+  PB_PRS_Reinforce_The_Baltic_Fleet_desc:0 ""
+  PB_PRS_Operation_Z:0 "Operation Z"
+  PB_PRS_Operation_Z_desc:0 ""
+  PB_PRS_Strengthen_The_Battalions:0 "Strengthen The Battalions"
+  PB_PRS_Strengthen_The_Battalions_desc:0 ""
+  PB_PRS_Innovative_Technologies:0 "Innovative Technologies"
+  PB_PRS_Innovative_Technologies_desc:0 ""
+  PB_PRS_Supremacy_Of_The_Will:0 "Supremacy Of The Will"
+  PB_PRS_Supremacy_Of_The_Will_desc:0 ""
 
   ##########################
   # EVENTS
