SCA Peace Decision with Imperial England

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -116,6 +116,13 @@
 
   PB_SCA_Second_American_Revolution_for_Britian:0 "Second Revolution in America"
 
+  SCA_Control_all_of_NA:0 "Control all major important major cities of British North America"
+
+  SCA_Imperial_Defeated:0 "§RThe British influence over the entirety of North America will be gone forever§!"
+
+  SCA_defeats_Imperial:0 "Defeating the Imperial Confederation"
+  SCA_defeats_Imperial_desc:0 "In order to finally free all Americans from the Slavery of the Londoner Empire, the entirety of their influence in North America must be destroyed. They can not remain here with any kind of foothold to threaten us."
+
   SCA_Milestone_1:0 "Milestone Reward"
   SCA_Milestone_2:0 "Milestone Reward"
   SCA_Milestone_3:0 "Milestone Reward"
