Ireland Flavor and Rebellion Wars Fixes

--- a/localisation/english/PB_Generic_Ideas_l_english.yml
+++ b/localisation/english/PB_Generic_Ideas_l_english.yml
@@ -19,3 +19,4 @@
   PB_The_Ukraine_Crisis:0 "The Ukraine Crisis"
   PB_SWI_Neutrality:0 "Swiss Armed Neutrality"
   PB_SWI_Neutrality_desc:0 "-"
+  PB_Colonial_Rescue_Operation:0 "Intervening in the Colonies"
