--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -30,3 +30,9 @@ modifier_production_speed_farm_mill_factor:0 "§YAgroponics Complex§! construct
 modifier_production_speed_farm_mill_factor_desc:0 "Modifies the speed of Agroponics Complex construction."
 
 modifier_experience_gain_clone_troopers_combat_factor:0 "Replicoid Trooper Experience Gain from Combat"
+
+
+### Diplomacy Triggers ###
+ cannot_call_allies_or_join_wars: "Cannot Call Allies or Join Wars"
+ cannot_call_allies_or_join_wars_warning: "§Y[ROOT.GetNameWithFlag]§! §Rcannot call allies or join wars.§!"
+ cannot_call_allies_or_join_wars_warning_FROM: "§Y[FROM.GetNameWithFlag]§! §Rcannot call allies or join wars.§!"
